@startuml
class com.andreeailie.tracker_presentation.tracker_overview.Meal {
+ <<Create>> Meal(UiText,Int,MealType,Int,Int,Int,Int,Boolean)
}

class com.andreeailie.tracker_presentation.search.SearchEvent$OnQueryChange {
+ <<Create>> OnQueryChange(String)
}

class com.andreeailie.tracker_presentation.search.SearchEvent$OnSearch {
}
class com.andreeailie.tracker_presentation.search.SearchEvent$OnToggleTrackableFood {
+ <<Create>> OnToggleTrackableFood(TrackableFood)
}

class com.andreeailie.tracker_presentation.search.SearchEvent$OnAmountForFoodChange {
+ <<Create>> OnAmountForFoodChange(TrackableFood,String)
}

class com.andreeailie.tracker_presentation.search.SearchEvent$OnTrackFoodClick {
+ <<Create>> OnTrackFoodClick(TrackableFood,MealType,LocalDate,String)
}

class com.andreeailie.tracker_presentation.search.SearchEvent$OnSearchFocusChange {
+ <<Create>> OnSearchFocusChange(Boolean)
}

class com.andreeailie.tracker_presentation.search.SearchEvent$SaveIdentifiedItems {
+ <<Create>> SaveIdentifiedItems(Map<String, Pair<String, Int>>,String,LocalDate,String)
}

class com.andreeailie.tracker_presentation.search.SearchEvent {
}
class com.andreeailie.tracker_presentation.search.SearchViewModel {
+  state
-  _uiEvent
+  uiEvent
+ <<Create>> SearchViewModel(TrackerUseCases,FilterOutDigits)
+ void onEvent(SearchEvent)
- void executeSearch(String,(List<TrackableFood>) -> Unit)
- void trackFood(SearchEvent.OnTrackFoodClick)
- void trackIdentifiedFood(SearchEvent.OnTrackFoodClick)
- void saveIdentifiedItems(Map<String, Pair<String, Int>>,String,LocalDate,String)
}


class com.andreeailie.tracker_presentation.groceries_list.GroceryListState {
+ <<Create>> GroceryListState(List<Grocery>)
}

class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewState {
+ <<Create>> TrackerOverviewState(Int,Int,Int,Int,Int,Int,Int,Int,LocalDate,List<TrackedFood>,List<Meal>)
}

class com.andreeailie.tracker_presentation.groceries_list.add_grocery.GroceryTextFieldState {
+ <<Create>> GroceryTextFieldState(String,String,Boolean)
}

class com.andreeailie.tracker_presentation.search.FileUploadViewModel {
-  _uploadResponse
+ LiveData<UploadResponse> uploadResponse
+ <<Create>> FileUploadViewModel(TrackerUseCases)
+ void uploadImage(File)
}


class com.andreeailie.tracker_presentation.search.SearchState {
+ <<Create>> SearchState(String,Boolean,Boolean,List<TrackableFoodUiState>)
}

class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnNextDayClick {
}
class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnPreviousDayClick {
}
class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnToggleMealClick {
+ <<Create>> OnToggleMealClick(Meal)
}

class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnDeleteTrackedFoodClick {
+ <<Create>> OnDeleteTrackedFoodClick(TrackedFood)
}

class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnAddFoodClick {
+ <<Create>> OnAddFoodClick(Meal)
}

class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent {
}
class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel$UiEvent$ShowSnackbar {
+ <<Create>> ShowSnackbar(String)
}

class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel$UiEvent$SaveNewEvent {
}
class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel$UiEvent {
}
class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel {
-  _groceryName
+ State<GroceryTextFieldState> groceryName
-  _groceryUnit
+ State<GroceryTextFieldState> groceryUnit
-  _eventQuantity
+ State<GroceryTextFieldState> eventQuantity
-  _eventImageUrl
+ State<GroceryTextFieldState> eventImageUrl
-  _eventFlow
+  eventFlow
+ Int? currentGroceryId
+ <<Create>> AddEditGroceryViewModel(GroceryUseCases,SavedStateHandle)
+ void onEvent(AddEditGroceryEvent)
}


class com.andreeailie.tracker_presentation.groceries_list.GroceryListViewModel {
+  state
-  _uiEvent
+  uiEvent
- Job? getGroceriesJob
+ <<Create>> GroceryListViewModel(GroceryUseCases)
+ void onEvent(GroceryListEvent)
- void refreshGroceries()
}


class com.andreeailie.tracker_presentation.search.TrackableFoodUiState {
+ <<Create>> TrackableFoodUiState(TrackableFood,Boolean,String)
}

class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewViewModel {
+  state
-  _uiEvent
+  uiEvent
- Job? getFoodsForDateJob
+ <<Create>> TrackerOverviewViewModel(Preferences,TrackerUseCases)
+ void onEvent(TrackerOverviewEvent)
- void refreshFoods()
}


class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredName {
+ <<Create>> EnteredName(String)
}

class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeNameFocus {
+ <<Create>> ChangeNameFocus(FocusState)
}

class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredImageUrl {
+ <<Create>> EnteredImageUrl(String)
}

class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeImageUrlFocus {
+ <<Create>> ChangeImageUrlFocus(FocusState)
}

class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredUnit {
+ <<Create>> EnteredUnit(String)
}

class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeUnitFocus {
+ <<Create>> ChangeUnitFocus(FocusState)
}

class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredQuantity {
+ <<Create>> EnteredQuantity(String)
}

class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeQuantityFocus {
+ <<Create>> ChangeQuantityFocus(FocusState)
}

class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$SaveNewEvent {
}
class com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent {
}
class com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent$OnDeleteGroceryClick {
+ <<Create>> OnDeleteGroceryClick(Grocery)
}

class com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent$OnAddGroceryClick {
}
class com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent$OnCheckGroceryClick {
+ <<Create>> OnCheckGroceryClick(Grocery)
}

class com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent {
}


com.andreeailie.tracker_presentation.search.SearchEvent +.. com.andreeailie.tracker_presentation.search.SearchEvent$OnQueryChange
com.andreeailie.tracker_presentation.search.SearchEvent <|-- com.andreeailie.tracker_presentation.search.SearchEvent$OnQueryChange
com.andreeailie.tracker_presentation.search.SearchEvent +.. com.andreeailie.tracker_presentation.search.SearchEvent$OnSearch
com.andreeailie.tracker_presentation.search.SearchEvent <|-- com.andreeailie.tracker_presentation.search.SearchEvent$OnSearch
com.andreeailie.tracker_presentation.search.SearchEvent +.. com.andreeailie.tracker_presentation.search.SearchEvent$OnToggleTrackableFood
com.andreeailie.tracker_presentation.search.SearchEvent <|-- com.andreeailie.tracker_presentation.search.SearchEvent$OnToggleTrackableFood
com.andreeailie.tracker_presentation.search.SearchEvent +.. com.andreeailie.tracker_presentation.search.SearchEvent$OnAmountForFoodChange
com.andreeailie.tracker_presentation.search.SearchEvent <|-- com.andreeailie.tracker_presentation.search.SearchEvent$OnAmountForFoodChange
com.andreeailie.tracker_presentation.search.SearchEvent +.. com.andreeailie.tracker_presentation.search.SearchEvent$OnTrackFoodClick
com.andreeailie.tracker_presentation.search.SearchEvent <|-- com.andreeailie.tracker_presentation.search.SearchEvent$OnTrackFoodClick
com.andreeailie.tracker_presentation.search.SearchEvent +.. com.andreeailie.tracker_presentation.search.SearchEvent$OnSearchFocusChange
com.andreeailie.tracker_presentation.search.SearchEvent <|-- com.andreeailie.tracker_presentation.search.SearchEvent$OnSearchFocusChange
com.andreeailie.tracker_presentation.search.SearchEvent +.. com.andreeailie.tracker_presentation.search.SearchEvent$SaveIdentifiedItems
com.andreeailie.tracker_presentation.search.SearchEvent <|-- com.andreeailie.tracker_presentation.search.SearchEvent$SaveIdentifiedItems
androidx.lifecycle.ViewModel <|-- com.andreeailie.tracker_presentation.search.SearchViewModel
androidx.lifecycle.ViewModel <|-- com.andreeailie.tracker_presentation.search.FileUploadViewModel
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent +.. com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnNextDayClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnNextDayClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent +.. com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnPreviousDayClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnPreviousDayClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent +.. com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnToggleMealClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnToggleMealClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent +.. com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnDeleteTrackedFoodClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnDeleteTrackedFoodClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent +.. com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnAddFoodClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnAddFoodClick
com.andreeailie.tracker_presentation.groceries_list.add_grocery.UiEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.UiEvent$ShowSnackbar
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel$UiEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel$UiEvent$ShowSnackbar
com.andreeailie.tracker_presentation.groceries_list.add_grocery.UiEvent <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel$UiEvent$ShowSnackbar
com.andreeailie.tracker_presentation.groceries_list.add_grocery.UiEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.UiEvent$SaveNewEvent
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel$UiEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel$UiEvent$SaveNewEvent
com.andreeailie.tracker_presentation.groceries_list.add_grocery.UiEvent <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel$UiEvent$SaveNewEvent
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel$UiEvent
androidx.lifecycle.ViewModel <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryViewModel
androidx.lifecycle.ViewModel <|-- com.andreeailie.tracker_presentation.groceries_list.GroceryListViewModel
androidx.lifecycle.ViewModel <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewViewModel
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredName
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredName
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeNameFocus
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeNameFocus
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredImageUrl
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredImageUrl
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeImageUrlFocus
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeImageUrlFocus
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredUnit
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredUnit
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeUnitFocus
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeUnitFocus
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredQuantity
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$EnteredQuantity
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeQuantityFocus
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$ChangeQuantityFocus
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent +.. com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$SaveNewEvent
com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent <|-- com.andreeailie.tracker_presentation.groceries_list.add_grocery.AddEditGroceryEvent$SaveNewEvent
com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent +.. com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent$OnDeleteGroceryClick
com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent <|-- com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent$OnDeleteGroceryClick
com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent +.. com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent$OnAddGroceryClick
com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent <|-- com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent$OnAddGroceryClick
com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent +.. com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent$OnCheckGroceryClick
com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent <|-- com.andreeailie.tracker_presentation.groceries_list.GroceryListEvent$OnCheckGroceryClick
@enduml